--- a/index.html
+++ b/index.html
@@ -2,31 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Valentine’s Day Letter</title>
+  <title>ValentineS Day Letter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap"
+    rel="stylesheet"
+  />
 </head>
 
 <body>
-
   <!-- Envelope Screen -->
   <div id="envelope-container">
-    <video
-      id="envelope"
-      autoplay
-      loop
-      muted
-      playsinline
-    >
-      <source src="envelope.mp4" type="video/mp4">
-    </video>
+    <img src="Y55ZnPZP8C.gif" id="envelope" alt="Envelope" />
     <p>♡ A Letter for You ♡</p>
   </div>
 
@@ -35,29 +29,20 @@
     <div class="letter-window">
       <h1 id="letter-title">Will you be my Valentine?</h1>
 
-      <video
-        id="letter-cat"
-        autoplay
-        loop
-        muted
-        playsinline
-      >
-        <source src="cat-hugs.mp4" type="video/mp4">
-      </video>
+      <img src="milk-and-mocha-hugs.gif" id="letter-cat" alt="Cat" />
 
       <div id="letter-buttons">
-        <img src="yes.png" class="btn yes-btn" alt="Yes">
-        <img src="no.png" class="btn no-btn" alt="No">
+        <img src="yes.png" class="btn yes-btn" alt="Yes" />
+        <img src="no.png" class="btn no-btn" alt="No" />
       </div>
 
       <p id="final-text">
-        <strong>Happy Valentine’s Day Chukkuduooo:</strong><br>
-        Every time I'm with you, I feel complete & I LOVE YOU 😘😘 💕
+        <strong>Happy Valentines Day Chukkuduooo:</strong> Every time I'm with you, I feel complete & I LOVE YOU 😘😘 💕
       </p>
     </div>
   </div>
 
   <!-- JavaScript -->
-  <script src="script.js" defer></script>
+  <script src="script.js"></script>
 </body>
-</html>
+</html> " i want the gif work in my phone too
