Fix HTML encoding and update content for mobile
Updated the HTML structure and fixed character encoding issues.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>ValentineS Day Letter</title>
+  <title>Valentine's Day Letter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- CSS -->
@@ -12,12 +12,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Poppins&display=swap"
     rel="stylesheet"
   />
 </head>
 
 <body>
+
   <!-- Envelope Screen -->
   <div id="envelope-container">
     <img src="Y55ZnPZP8C.gif" id="envelope" alt="Envelope" />
@@ -29,7 +30,7 @@
     <div class="letter-window">
       <h1 id="letter-title">Will you be my Valentine?</h1>
 
-      <img src="milk-and-mocha-hugs.gif" id="letter-cat" alt="Cat" />
+      <img src="milk-and-mocha-hugs.gif" id="letter-cat" alt="Cat Hug" />
 
       <div id="letter-buttons">
         <img src="yes.png" class="btn yes-btn" alt="Yes" />
@@ -37,7 +38,8 @@
       </div>
 
       <p id="final-text">
-        <strong>Happy Valentines Day Chukkuduooo:</strong> Every time I'm with you, I feel complete & I LOVE YOU 😘😘 💕
+        <strong>Happy Valentine's Day Chukkuduooo 💕</strong><br>
+        Every time I'm with you, I feel complete & I LOVE YOU 😘😘
       </p>
     </div>
   </div>
@@ -45,4 +47,4 @@
   <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
-</html> " i want the gif work in my phone too
+</html>
