--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
   <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Poppins&display=swap"
-    rel="stylesheet"
-  />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <!-- Envelope Screen -->
   <div id="envelope-container">
-    <img src="Y55ZnPZP8C.gif" id="envelope" alt="Envelope" />
+    <img src="Y55ZnPZP8C.gif" id="envelope" alt="Envelope">
     <p>♡ A Letter for You ♡</p>
   </div>
 
@@ -30,11 +27,11 @@
     <div class="letter-window">
       <h1 id="letter-title">Will you be my Valentine?</h1>
 
-      <img src="milk-and-mocha-hugs.gif" id="letter-cat" alt="Cat Hug" />
+      <img src="milk-and-mocha-hugs.gif" id="letter-cat" alt="Cat Hug">
 
       <div id="letter-buttons">
-        <img src="yes.png" class="btn yes-btn" alt="Yes" />
-        <img src="no.png" class="btn no-btn" alt="No" />
+        <img src="yes.png" class="btn yes-btn" alt="Yes">
+        <img src="no.png" class="btn no-btn" alt="No">
       </div>
 
       <p id="final-text">
@@ -48,4 +45,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
